# dialtone-mesh

./: .gitignore  .gitmodules
scaffold/: main.go
v1/: README.md  mesh_v1.c
v1/cli/: build.go  install.go  main.go  main_test.go  paths.go
v1/go/: mesh.go
v2/: Makefile  README.md  flake.nix  mesh_v2.c  static-build.nix
v3/: Cargo.toml  README.md  build.sh  demo.sh  flake.nix  iroh_readme.md  main_test.go  mod.json  run.sh  test-matrix.sh
v3/cli/: main.go  main_test.go
v3/src/: index.html  main.rs
