[package]
name = "mesh-v3"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["json", "ws"] }
iroh = { version = "*", features = ["address-lookup-pkarr-dht"] }
iroh-gossip = "*"
iroh-ping = "*"
iroh-tickets = "*"
n0-future = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
time = { version = "0.3", features = ["formatting"] }
